# iot-log-parser

./: Cargo.toml  build.rs
proto/: kvpair.proto  message.proto
src/: lib.rs  main.rs  proto.rs
src/parser/: parser.rs
