[package]
name = "iot_log_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "log_parser"
path = "src/lib.rs"

[[bin]]
name = "iot_parser"
path = "src/main.rs"

[dependencies]
nom = "7.1.3"
hex = "0.4.3"
prost = "0.12.4"
chrono = "0.4.38"
dateparser = "0.2.1"

[build-dependencies]
prost-build = "0.12.4"